--- a/HistoGlobe_client/style/modules/gui/Button.less
+++ b/HistoGlobe_client/style/modules/gui/Button.less
@@ -51,6 +51,12 @@
   float: left;
 }
 
+.button-no-background
+{
+  background: none;
+  color: @color_highlight;
+}
+
 .own-button
 {
   width: 100%;
