--- a/HistoGlobe_client/style/modules/gui/Title.less
+++ b/HistoGlobe_client/style/modules/gui/Title.less
@@ -5,7 +5,8 @@
   left: 0;
   width: 100%;
   height: 2*@element_window_distance + @logo_height;
-  background-color: @color_bg_medium_semitransparent;
+  background-color: @color_bg_medium;
+  box-shadow: 0 0 @shadow_radius rgba(0,0,0,@shadow_intensity);
 }
 
 #title
