--- a/HistoGlobe_client/style/modules/imprint/Imprint.less
+++ b/HistoGlobe_client/style/modules/imprint/Imprint.less
@@ -34,9 +34,9 @@
   overflow-y: auto;
   padding: @popover_body_padding;
   background-color: white;
-  -webkit-box-shadow: 5px 5px 10px -1px rgba(135,135,135,1);
-  -moz-box-shadow: 5px 5px 10px -1px rgba(135,135,135,1);
-  box-shadow: 5px 5px 10px -1px rgba(135,135,135,1);
+  -webkit-box-shadow: 0px 0px @shadow_radius rgba(0,0,0,@shadow_intensity);
+  -moz-box-shadow: 0px 0px @shadow_radius rgba(0,0,0,@shadow_intensity);
+  box-shadow: 0px 0px @shadow_radius rgba(0,0,0,@shadow_intensity);
 
   font-family: @secondary_font_face;
   font-size: 0.85em;
