--- a/HistoGlobe_client/style/modules/modules.less
+++ b/HistoGlobe_client/style/modules/modules.less
@@ -4,6 +4,7 @@
 @import "edit_mode/WorkflowWindow.less";
 @import "edit_mode/NewGeometryTool.less";
 @import "edit_mode/NewNameTool.less";
+@import "edit_mode/NewHiventBox.less";
 @import "globe/Globe.less";
 @import "gui/Button.less";
 @import "gui/ButtonArea.less";
