--- a/HistoGlobe_client/style/modules/hivents/HiventLabel.less
+++ b/HistoGlobe_client/style/modules/hivents/HiventLabel.less
@@ -8,7 +8,7 @@
   padding: 0px 2px 0px 2px;
   background-color: rgba(255,255,255,0.7);
   border-radius: 5px;
-  box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px @shadow_radius/2 rgba(0,0,0,@shadow_intensity/2);
   .table{
     //bottom: 35px;
   }
@@ -31,7 +31,7 @@
   z-index: 10000;
   background-color: rgba(255,255,255,0.7);
   border-radius: 5px;
-  box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px @shadow_radius/2 rgba(0,0,0,@shadow_intensity/2);
 	table{
 		border-collapse: collapse;
     line-height: 1em;
@@ -52,5 +52,5 @@
   color: #2f3b46; // or #000000?
   background-color: rgba(255,255,255,1);
   border-radius: 5px;
-  box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px @shadow_radius/2 rgba(0,0,0,@shadow_intensity/2);
 }
