--- a/HistoGlobe_client/style/modules/hivents/HiventList.less
+++ b/HistoGlobe_client/style/modules/hivents/HiventList.less
@@ -28,7 +28,7 @@
   bottom: 100px;
   right: 10px;
   width: 270px;
-  box-shadow: 0 0 5px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px @shadow_radius rgba(0,0,0,@shadow_intensity);
   font-size: 30pt * @widget_font_size_factor;
   //border-radius: @widget_border_radius_top_left @widget_border_radius_top_right @widget_border_radius_bottom_right @widget_border_radius_bottom_left;
 
