--- a/HistoGlobe_client/style/modules/search_box/SearchBox.less
+++ b/HistoGlobe_client/style/modules/search_box/SearchBox.less
@@ -50,7 +50,7 @@
     left: 100px;
     height: 29px;
     width: 270px;
-    box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
+    box-shadow: 0px 0px @shadow_radius rgba(0,0,0,@shadow_intensity);
 
     font-family: Arial, Helvetica, sans-serif;
     text-align: left;
