--- a/HistoGlobe_client/style/modules/timeline/Timeline.less
+++ b/HistoGlobe_client/style/modules/timeline/Timeline.less
@@ -1,6 +1,6 @@
 #timeline-area
 {
-  box-shadow:   1px 1px 2px 2px rgba(0,0,0,@shadow_intensity);
+  box-shadow: 0px 0px @shadow_radius rgba(0,0,0,@shadow_intensity);
   overflow: visible !important;
   font-family: @primary_font_face;
 
@@ -75,10 +75,6 @@
   .buttons-group    /* remove bg color of buttons itself */
   {
     margin-top: -2px;
-    .button
-    {
-      background: none;
-    }
   }
 }
 
