--- a/HistoGlobe_client/style/modules/areas/leaflet_labels_override.less
+++ b/HistoGlobe_client/style/modules/areas/leaflet_labels_override.less
@@ -4,14 +4,15 @@
   background-color: transparent;
   border-color: transparent;
 
-  color: #444;
+  color: @color_bg_medium;
   text-shadow:
-    -1px -1px 0 #fff,
-    1px -1px 0 #fff,
-    -1px 1px 0 #fff,
-    1px 1px 0 #fff;
+    -1px -1px 2px @color_bg_light,
+     1px -1px 2px @color_bg_light,
+    -1px  1px 2px @color_bg_light,
+     1px  1px 2px @color_bg_light;
 
-  font-family: @secondary_font_face;
+  font-family: 'Roboto' !important;
+  /*font-family: @primary_font_face;*/
   font-size: @map_label_size !important;
   font-weight: lighter;
   text-align: center;
