finished ADD and CHN operation and restyled new name tool slightly

--- a/HistoGlobe_client/style/HistoGlobe.less
+++ b/HistoGlobe_client/style/HistoGlobe.less
@@ -196,8 +196,7 @@ body {
   color: @color_white;
   box-shadow: 0 0 @shadow_radius -2px @color_white;
 }
-
-.hg-input-focus
+.hg-input:focus
 {
   box-shadow: 0 0 @shadow_radius 3px @color_active;
 }
