bugfix: separated country was still in selectedArea array after removal -> now selection is possible

--- a/HistoGlobe_client/style/modules/edit_mode/NewNameTool.less
+++ b/HistoGlobe_client/style/modules/edit_mode/NewNameTool.less
@@ -20,7 +20,7 @@
   background: none;
   font-size: 1.1em;
   text-align: center;
-  color: @color_bg_light;
+  color: @color_white;
 }
 #new-name-input:focus
 {
