button tooltips now at correct position

--- a/HistoGlobe_client/style/modules/gui/ButtonArea.less
+++ b/HistoGlobe_client/style/modules/gui/ButtonArea.less
@@ -54,8 +54,8 @@
 
 .spacer
 {
-  width: @element_window_distance;
-  height: @element_window_distance;
+  width: @button_spacer_distance;
+  height: @button_spacer_distance;
 }
 
 .highContrast .button-area   {
