restructure modules, made NowMarker own UI model

--- a/HistoGlobe_client/style/modules/timeline/NowMarker.less
+++ b/HistoGlobe_client/style/modules/timeline/NowMarker.less
@@ -3,7 +3,7 @@
   position: absolute;
   z-index: 10;
   width: @now_marker_width;
-  height: 100%;
+  height:     @timeline_height;
   bottom: 0;
   left: 50%;
   margin-left: -@now_marker_width/2;
