separated control buttons from map and timeline

--- a/HistoGlobe_client/style/modules/modules.less
+++ b/HistoGlobe_client/style/modules/modules.less
@@ -1,6 +1,5 @@
 //////////////////////// INCLUDES //////////////////////////////////////////////
 @import "areas/Areas.less";
-@import "control_buttons/ControlButtons.less";
 @import "edit_mode/WorkflowWindow.less";
 @import "edit_mode/NewGeometryTool.less";
 @import "edit_mode/NewNameTool.less";
@@ -18,9 +17,11 @@
 @import "hivents/HiventMarker.less";
 @import "hivents/HiventStory.less";
 @import "imprint/Imprint.less";
+@import "map/ControlButtonsMap.less";
 @import "search_box/SearchBox.less";
 @import "timeline/NowMarker.less";
 @import "timeline/Timeline.less";
+@import "timeline/ControlButtonsTimeline.less";
 @import "watermark/Watermark.less";
 
 @import "edit_mode/leaflet_control_override.less";
