--- a/HistoGlobe_client/style/modules/gui/Button.less
+++ b/HistoGlobe_client/style/modules/gui/Button.less
@@ -7,7 +7,7 @@
   height: @button_diameter;
   border-radius: @button_diameter*0.5;
   background-color: @color_highlight;
-  font-size: @button_diameter * @widget_font_size_factor;
+  font-size: @button_diameter * @ui_widget_font_size_factor;
   text-align: center;
   color: #fff;
   text-shadow: 0px 0px 3px rgba(0,0,0,0.3);
@@ -42,7 +42,7 @@
   width: @button_diameter * @button_abort_shrink_factor;
   height: @button_diameter * @button_abort_shrink_factor;
   border-radius: @button_diameter * @button_abort_shrink_factor * 0.5;
-  font-size: @button_diameter * @button_abort_shrink_factor * @widget_font_size_factor;
+  font-size: @button_diameter * @button_abort_shrink_factor * @ui_widget_font_size_factor;
   background-color: transparent;
 }
 
