--- a/HistoGlobe_client/style/modules/modules.less
+++ b/HistoGlobe_client/style/modules/modules.less
@@ -4,11 +4,13 @@
 @import "edit_mode/NewGeometryTool.less";
 @import "edit_mode/NewNameTool.less";
 @import "edit_mode/NewHiventBox.less";
+@import "control_buttons/ControlButtonsTop.less";
 @import "globe/Globe.less";
 @import "gui/Button.less";
 @import "gui/ButtonArea.less";
 @import "gui/Title.less";
-@import "gui/popover.less";
+@import "gui/Popover.less";
+@import "gui/Switch.less";
 @import "help/Help.less";
 @import "histograph/HistoGraph.less";
 @import "hivents/HiventList.less";
@@ -17,7 +19,7 @@
 @import "hivents/HiventMarker.less";
 @import "hivents/HiventStory.less";
 @import "imprint/Imprint.less";
-@import "map/ControlButtonsMap.less";
+@import "map/Map.less";
 @import "search_box/SearchBox.less";
 @import "timeline/NowMarker.less";
 @import "timeline/Timeline.less";
