--- a/HistoGlobe_client/style/modules/gui/Popover.less
+++ b/HistoGlobe_client/style/modules/gui/Popover.less
@@ -5,7 +5,7 @@
 @popover_body_padding: 15px;
 
 .guiPopover, .guiPopoverBig {
-  border-radius: @widget_border_radius_top_left @widget_border_radius_top_right @widget_border_radius_bottom_right @widget_border_radius_bottom_left;
+  border-radius: 0;
   width: @popover_width;
   height: 350px;
   opacity: 0;
