--- a/HistoGlobe_client/style/HistoGlobe.less
+++ b/HistoGlobe_client/style/HistoGlobe.less
@@ -57,9 +57,6 @@ body {
   overflow: hidden;
 }
 
-
-// MAP -------------------------------------------------------------------------
-
 #top-area {
   position: absolute;
   top: 0;
@@ -69,16 +66,17 @@ body {
   bottom: @timeline_height;
 }
 
-#map-area {
-  position: relative;
 
+// SPATIAL DISPLAY -------------------------------------------------------------
+
+#spatial-area {
+  position: relative;
   height: 100%;
   overflow: hidden;
-
   box-shadow: 0 0 @shadow_radius rgba(0,0,0,@shadow_intensity);
 }
 
-#map-canvas {
+#spatial-canvas {
   position: relative;
   overflow: hidden;
   width: 100%;
