readded HistoGraph, restructured DOM structure for timeline

--- a/HistoGlobe_client/style/HistoGlobe.less
+++ b/HistoGlobe_client/style/HistoGlobe.less
@@ -86,7 +86,7 @@ body {
 
 
 // TIMELINE --------------------------------------------------------------------
-#timeline-area {
+#bottom-area {
   position: absolute;
   overflow: hidden;
 
