--- a/HistoGlobe_client/style/modules/timeline/Timeline.less
+++ b/HistoGlobe_client/style/modules/timeline/Timeline.less
@@ -1,10 +1,10 @@
-#timeline-area
+#bottom-area
 {
   box-shadow: 0px 0px @shadow_radius rgba(0,0,0,@shadow_intensity);
   overflow: visible !important;
   font-family: @primary_font_face;
 
-  #tl
+  #timeline
   {
     position:   absolute;
     left:       0px;
@@ -63,7 +63,7 @@
   }
 }
 
-.highContrast #timeline-area #tl #tl_wrapper #tl_slide
+.highContrast #bottom-area #tl #tl_wrapper #tl_slide
 {
     background-color: @color_bg_hc;
 }
