--- a/HistoGlobe_client/style/modules/timeline/Timeline.less
+++ b/HistoGlobe_client/style/modules/timeline/Timeline.less
@@ -15,12 +15,12 @@
     cursor:     -webkit-grab;
     cursor:     -moz-grab;
 
-    #tl_wrapper
+    #tl-wrapper
     {
       height: @timeline_height !important;
       background-color: @color_bg_medium;
 
-      #tl_slide
+      #tl-slide
       {
         height: @timeline_height !important;
 
@@ -63,7 +63,7 @@
   }
 }
 
-.highContrast #bottom-area #tl #tl_wrapper #tl_slide
+.highContrast #bottom-area #tl #tl-wrapper #tl-slide
 {
     background-color: @color_bg_hc;
 }
