--- a/HistoGlobe_client/style/modules/timeline/Timeline.less
+++ b/HistoGlobe_client/style/modules/timeline/Timeline.less
@@ -24,7 +24,7 @@
       {
         height: @timeline_height !important;
 
-        .tl_datemarker
+        .tl-datemarker
         {
           position: absolute;
           z-index: 2;
@@ -38,13 +38,13 @@
           font-weight: 100;
           display: none;
 
-          .tl_months
+          .tl-months
           {
             position: relative;
             height: 0px;
             margin: -13px 0px 0px -5px;
 
-            .tl_month
+            .tl-month
             {
               position: absolute;
               overflow: hidden;
