--- a/HistoGlobe_client/style/modules/search_box/SearchBox.less
+++ b/HistoGlobe_client/style/modules/search_box/SearchBox.less
@@ -31,7 +31,7 @@
   z-index: 10;
 
   .transition-property(left);
-  .transition-duration(@ui_animation_speed);
+  .transition-duration(@fast_animation_time);
 
   .search-box {
     top: 5px;
