--- a/HistoGlobe_client/style/modules/edit_mode/NewNameTool.less
+++ b/HistoGlobe_client/style/modules/edit_mode/NewNameTool.less
@@ -27,6 +27,11 @@
   color: @color_white;
 }
 
+.no-value-change
+{
+  color: @color_disabled_active;
+}
+
 #newShortName
 {
   font-size: @short_name_font_size;
