all operations work fully inversible and HistoricalChange provides textual description

--- a/HistoGlobe_client/style/modules/areas/leaflet_labels_override.less
+++ b/HistoGlobe_client/style/modules/areas/leaflet_labels_override.less
@@ -6,13 +6,12 @@
 
   color: @color_bg_medium;
   text-shadow:
-    -1px -1px 2px @color_bg_light,
-     1px -1px 2px @color_bg_light,
-    -1px  1px 2px @color_bg_light,
-     1px  1px 2px @color_bg_light;
+    -1px -1px 1px @color_bg_light,
+     1px -1px 1px @color_bg_light,
+    -1px  1px 1px @color_bg_light,
+     1px  1px 1px @color_bg_light;
 
-  font-family: 'Roboto' !important;
-  /*font-family: @primary_font_face;*/
+  font-family: @primary_font_face;
   font-size: @map_label_size !important;
   font-weight: lighter;
   text-align: center;
