adapted workflow window and text for each operation

--- a/HistoGlobe_client/style/modules/edit_mode/WorkflowWindow.less
+++ b/HistoGlobe_client/style/modules/edit_mode/WorkflowWindow.less
@@ -17,7 +17,7 @@
 {
   /* underneath hg title (take rest of height of main window, same style as title) */
   width: 100%;
-  height: @operation_window_height - (2*@element_window_distance + @logo_height);
+  height: @workflow_window_height - (2*@element_window_distance + @logo_height);
   box-shadow: 0 7px @shadow_radius -7px rgba(0,0,0,@shadow_intensity);
   border-radius: 0 0 @border_radius @border_radius;
 }
@@ -30,7 +30,7 @@
 .ww-description-row
 {
   float:  left;
-  height: @operation_window_height - (2*@element_window_distance + @logo_height);
+  height: @workflow_window_height - (2*@element_window_distance + @logo_height);
 }
 
 .ww-button-col
@@ -40,7 +40,7 @@
 }
 .ww-step-col
 {
-  width: @operation_step_width;
+  width: @workflow_window_step_width;
 }
 
 .ww-description-cell
